public/css/main.css
#main.main-calendar {
    overflow: scroll;
    padding: 0;
    height: calc(100vh - 102px);
}

#calendar {
    --calendar-bg-header-color: #ececec;
    --calendar-bg-day-color: #f6f6f6;
    --calendar-bg-day-event-color: #d1e7dd;
    --calendar-bg-day-event-end-color:#75b798;
    --calendar-bg-day-current-color: #6c757d;
    --calendar-line-height: 30px;
    --calendar-day-width: 3px;
    width: max-content;
}

.cal-header {
    position: sticky;
    top: 0;
    display: flex;
    z-index: 101;
}

.cal-header .cal-titre-header {
    background: #fff;
}

.cal-titre {
    height: var(--calendar-line-height);
    width: 400px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    border-right: var(--calendar-day-width) solid white;
    background: var(--calendar-bg-header-color);
    line-height: var(--calendar-line-height);
    padding-left: .25rem;
    position: sticky;
    left: 0;
}

.cal-month[data-nbdays="28"] { --calendar-nb-days: 28; }
.cal-month[data-nbdays="29"] { --calendar-nb-days: 29; }
.cal-month[data-nbdays="30"] { --calendar-nb-days: 30; }
.cal-month[data-nbdays="31"] { --calendar-nb-days: 31; }

.cal-month[data-nbdays] {
    width: calc(var(--calendar-day-width) * (var(--calendar-nb-days) + 1));
}

.cal-month {
    border-right: var(--calendar-day-width) solid white;
    background: #ececec;
    display: flex;
    justify-content: center;
    align-items: center;
}

.cal-ligne {
    display: flex;
    margin-bottom: var(--calendar-day-width);
}

.cal-month .jour {
    display: block;
    float: left;
    height: var(--calendar-line-height);
    background-color: var(--calendar-bg-day-color);
    cursor: pointer;
    width: var(--calendar-day-width);
}

.cal-month .active {
    background-color: var(--calendar-bg-day-event-color) !important;
}
.cal-month .jourfin {
    background-color: var(--calendar-bg-day-event-end-color) !important;
}
.cal-month .jour:hover,
.cal-month .jourcourant {
    background-color: var(--calendar-bg-day-current-color) !important;
}

.organisme-card {
    background-color: #ddd;
    margin-bottom: 1rem;
}

.organisme-card > div {
    padding-bottom: .5rem;
}

